--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
