--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.4",
@@ -20,7 +19,7 @@
     "start": "vite",
     "build": "vite build",
     "dev": "vite",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "build:css": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
   },
@@ -44,10 +43,16 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "ts-jest": "^29.4.0",
     "vite": "^6.1.0"
   }
 }
